...
    <string name="action_confirm">Confirm</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_return">Return</string>
    <string name="action_positive">Yes</string>
    <string name="action_negative">No</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copied: %s</string>
    <string name="action_app_not_installed">Required App is not installed</string>
    <string name="action_scroll_up">Up</string>
    <string name="action_scroll_down">Down</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_copy_name">Copy: %s</string>
...
    <!-- MENU -->
    <string name="menu_search">Search</string>
    <string name="menu_manga">Comics / Mangas</string>
    <string name="menu_library">Library</string>
    <string name="menu_books">Books</string>
    <string name="menu_book">Library</string>
    <string name="menu_history">History</string>
    <string name="menu_vocabulary">Vocabulary</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_annotations">Annotations</string>
    <string name="menu_config">Configuration</string>
...
    <string name="switch_next_book_not_found">Next file not found</string>
    <string name="switch_prev_book_first_comic">This is the first file.</string>
    <string name="switch_next_book_last_comic">This is the last file.</string>

    <!-- LIBRARY - Manga / Comic -->
    <string name="manga_library_last_access">Last access</string>
    <string name="manga_library_menu_favorite_add">Add favorite</string>
    <string name="manga_library_menu_favorite_remove">Remove favorite</string>
    <string name="manga_library_menu_delete">Delete</string>
    <string name="manga_library_menu_delete_description">Do you really want to delete the file?</string>
    <string name="manga_library_menu_clear">Clear history</string>
    <string name="manga_library_default">Default</string>
    <string name="manga_library_menu_copy">Copy</string>

...
    <string name="manga_library_line_series">Series:</string>
    <string name="manga_library_line_publisher">Published:</string>
    <string name="manga_library_line_authors">Authors:</string>

    <!-- LIBRARY - Book -->
    <string name="menu_book_config_send">Send file</string>
    <string name="menu_book_config_clear_progress">Clear progress</string>
    <string name="menu_book_config_delete">Delete</string>
    <string name="menu_book_config_detail">Book detail</string>
    <string name="menu_book_config_tag">Add tags</string>
    <string name="menu_book_config_book_mark">Book mark</string>

    <string name="book_library_share">Book share</string>

    <string name="book_library_default">Default</string>
    <string name="book_library_menu_delete">Delete</string>
    <string name="book_library_menu_clear">Clear history</string>
    <string name="book_library_menu_favorite_add">Add favorite</string>
    <string name="book_library_menu_favorite_remove">Remove favorite</string>
    <string name="book_library_menu_copy">Copy</string>
    <string name="book_library_menu_delete_description">Do you really want to delete the file?</string>

    <string name="book_library_separator_favorite">Favorite</string>
    <string name="book_library_separator_non_favorite">Others</string>

...
    <string name="popup_library_manga_type_separator_carousel">Carousel with separator</string>
    <string name="popup_library_manga_type_separator_line">Line with separator</string>
    <string name="popup_library_manga_type_line">Line</string>

    <!-- POPUP LIBRARY - Book -->
    <string name="popup_library_book_tab_item_ordering">Order</string>
    <string name="popup_library_book_tab_item_filter">Filter</string>
    <string name="popup_library_book_tab_item_type">Grid</string>

    <string name="popup_library_book_order_name">For name</string>
    <string name="popup_library_book_order_date">For date</string>
    <string name="popup_library_book_order_access">For last access</string>
    <string name="popup_library_book_order_favorite">Favorite first</string>
...
