<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_book_library_search"
        android:icon="@drawable/ico_search"
        android:orderInCategory="100"
        android:title="@string/menu_search"
        android:visible="true"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item android:id="@+id/menu_book_library_list_order"
        android:title="@string/menu_book_reading_order"
        android:icon="@drawable/ico_animated_sort_to_desc_name"
        android:orderInCategory="101"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/menu_book_library_type"
        android:icon="@drawable/ico_animated_type_grid_gridbig_exit"
        android:orderInCategory="110"
        android:title="@string/menu_book_library_type"
        android:visible="true"
        app:showAsAction="always" />
</menu>