...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom">
                <LinearLayout
                    android:id="@+id/book_line_favorite"
                    android:layout_width="@dimen/book_grid_favorite_content_big"
                    android:layout_height="@dimen/book_grid_favorite_content_big"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/book_line_favorite_icon"
                        style="@style/IconFavorite.Book"
...
                        android:layout_height="@dimen/book_grid_favorite_big"
                        android:background="@drawable/ico_favorite_mark_border"
                        android:src="@drawable/ico_favorite_unmark"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/book_line_config"
                    android:layout_width="@dimen/book_grid_config_content_big"
                    android:layout_height="@dimen/book_grid_config_content_big"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/book_line_config_icon"
                        style="@style/IconConfig.Book"
...
