<io.supercharge.shimmerlayout.ShimmerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shimmer_skeleton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:shimmer_angle="20"
    android:visibility="gone"
    app:shimmer_animation_duration="1200"
    app:shimmer_color="@color/shimmer"
    app:shimmer_mask_width="0.5">
    <LinearLayout
        android:id="@+id/skeleton_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>
</io.supercharge.shimmerlayout.ShimmerLayout>